--- a/src/app/protected/cranix/security/proxy/proxy.component.html
+++ b/src/app/protected/cranix/security/proxy/proxy.component.html
@@ -8,17 +8,17 @@
   <ion-col>
     <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="basic">
       <ion-segment-button value="basic">
-        <ion-label>{{'Basic configuration' | translate}}</ion-label>
+        <ion-icon name="settings"></ion-icon>
       </ion-segment-button>
       <ion-segment-button value="good">
-        <ion-label>{{'White list' | translate}}</ion-label>
+        <ion-icon name="happy" color="success"></ion-icon>
       </ion-segment-button>
       <ion-segment-button value="bad">
-        <ion-label>{{'Black list' | translate}}</ion-label>
+        <ion-icon name="sad" color="danger"></ion-icon>
       </ion-segment-button>
       <ion-segment-button *ngIf="authService.session.name == 'cephalix' || authService.isAllowed('cephalix.manage')"
         value="cephalix">
-        <ion-label>{{'Cephalix list' | translate}}</ion-label>
+        <img src="assets/images/logo/cranix_school.svg" width="30">
       </ion-segment-button>
       <!-- ion-segment-button value="positive">
       <ion-label>{{'Positive lists' | translate}}</ion-label>
@@ -26,9 +26,20 @@
     </ion-segment>
   </ion-col>
 </ion-row>
-<ion-content *ngIf="!authService.isMD()" id="carded">
+<ion-content id="carded">
   <ion-card>
-    <ion-card-header>
+    <ion-card-header *ngIf="authService.isMD()">
+      <form #addNewDomainForm="ngForm" *ngIf="segment == 'good' || segment == 'bad' || segment == 'cephalix'">
+        <ion-item>
+          <ion-input [(ngModel)]="newDomain" name="newDomain" placeholder="{{'Enter a new domain name'| translate}}"
+            pattern="[a-z0-9.-]+\.[a-z]{2,}$"></ion-input>
+          <ion-button slot="start" (click)="addNewDomain()" [disabled]="!addNewDomainForm.valid">
+            <ion-icon slot="icon-only" name="add"></ion-icon>
+          </ion-button>
+        </ion-item>
+      </form>
+    </ion-card-header>
+    <ion-card-header *ngIf="!authService.isMD()">
       <ion-toolbar>
         <ion-card-title>{{ 'Manage proxy configuration' | translate}}</ion-card-title>
         <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="basic">
@@ -53,8 +64,8 @@
           <ion-item>
             <ion-input [(ngModel)]="newDomain" name="newDomain" placeholder="{{'Enter a new domain name'| translate}}"
               pattern="[a-z0-9.-]+\.[a-z]{2,}$"></ion-input>
-            <ion-button slot="end" (click)="addNewDomain()" [disabled]="!addNewDomainForm.valid">
-              <ion-icon slot="icon-only" name="add"></ion-icon>
+            <ion-button fill="clear"  slot="start" (click)="addNewDomain()" [disabled]="!addNewDomainForm.valid">
+              <ion-icon slot="icon-only" name="add-circle"></ion-icon>
             </ion-button>
           </ion-item>
         </form>
@@ -77,7 +88,7 @@
         </ion-buttons>
       </ion-toolbar>
     </ion-card-header>
-    <ion-card-content *ngIf="segment == 'basic'">
+    <ion-card-content *ngIf="segment == 'basic' &&  !authService.isMD()">
       <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
         rowHeight="{{authService.settings.rowHeight}}" [rowData]="rowData" [columnDefs]="columnDefs" [context]="context"
         (gridReady)="proxyGridReady($event)" id="proxyGridTable">
@@ -86,7 +97,7 @@
     <ion-card-content *ngIf="segment == 'good' || segment == 'bad' || segment == 'cephalix' || segment == 'positive'">
       <ion-list>
         <ion-item *ngFor="let dom of lists[segment]; index as i">{{dom}}
-          <ion-button slot="end" (click)="deleteDomain(i)">
+          <ion-button fill="clear" slot="start" (click)="deleteDomain(i)">
             <ion-icon color="danger" slot="icon-only" name="trash"></ion-icon>
           </ion-button>
         </ion-item>
@@ -97,7 +108,4 @@
       </ion-grid>
     </ion-card-content>
   </ion-card>
-</ion-content>
-<ion-content *ngIf="authService.isMD()">
-
 </ion-content>
