--- a/src/app/protected/cranix/security/unbound/unbound.component.html
+++ b/src/app/protected/cranix/security/unbound/unbound.component.html
@@ -17,10 +17,10 @@
       <ion-segment-button value="bad">
         <ion-icon name="sad" color="danger"></ion-icon>
       </ion-segment-button>
-      <!-- ion-segment-button *ngIf="authService.session.name == 'cephalix' || authService.isAllowed('cephalix.manage')"
+      <ion-segment-button *ngIf="authService.session.name == 'cephalix'"
         value="cephalix">
         <img src="assets/images/logo/cranix_school.svg" width="30">
-      </ion-segment-button -->
+      </ion-segment-button>
       <ion-segment-button value="categories">
         <ion-icon name="sad" color="danger"></ion-icon>
       </ion-segment-button>
@@ -46,7 +46,7 @@
           <ion-col *ngIf="!authService.isMD() || segment=='good'" size="authService.isMD() ? 11 : 4">
             <ion-list>
               <ion-item lines="none">
-                <ion-title>{{'Own White List'|translate}}</ion-title>
+                <H1>{{'Own White List'|translate}}</H1>
               </ion-item>
               <form #addNewDomain1Form="ngForm">
                 <ion-item>
@@ -70,7 +70,7 @@
           <ion-col *ngIf="!authService.isMD() || segment=='bad'" size="authService.isMD() ? 12 : 4">
             <ion-list>
               <ion-item lines="none">
-                <ion-title>{{'Own Black List'|translate}}</ion-title>
+                <H1>{{'Own Black List'|translate}}</H1>
               </ion-item>
               <form #addNewDomainForm="ngForm">
                 <ion-item>
@@ -91,10 +91,34 @@
               </ion-item>
             </ion-list>
           </ion-col>
-          <ion-col  *ngIf="!authService.isMD() || segment=='categories'" size="authService.isMD() ? 12 : 4">
+          <ion-col *ngIf="authService.session.name == 'cephalix' && (!authService.isMD() || segment=='cephalix')" size="authService.isMD() ? 12 : 4">
             <ion-list>
               <ion-item lines="none">
-                <ion-title>{{'Denied Categories'|translate}}</ion-title>
+                <H2>{{'CEPHALIX List'|translate}}</H2>
+              </ion-item>
+              <form #addNewDomainForm="ngForm">
+                <ion-item>
+                  <ion-input [(ngModel)]="newDomain" name="newDomain"
+                    placeholder="{{'Enter a new domain name'| translate}}" pattern="[a-z0-9.-]+\.[a-z]{2,}$">
+                  </ion-input>
+                  <ion-button fill="clear" slot="start" (click)="addNewDomain()"
+                    [disabled]="!addNewDomainForm.valid || saving">
+                    <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+                  </ion-button>
+                </ion-item>
+              </form>
+              <ion-item *ngFor="let dom of cephalixList; index as i">
+                <ion-label class="label-max-width">{{dom}}</ion-label>
+                <ion-button fill="clear" slot="start" (click)="deleteDomain(i)" [disabled]="saving">
+                  <ion-icon color="danger" slot="icon-only" name="trash"></ion-icon>
+                </ion-button>
+              </ion-item>
+            </ion-list>
+          </ion-col>
+          <ion-col *ngIf="!authService.isMD() || segment=='categories'" size="authService.isMD() ? 12 : 4">
+            <ion-list>
+              <ion-item lines="none">
+                <H2>{{'Denied Categories'|translate}}</H2>
               </ion-item>
               <div *ngFor="let category of categories">
                 <ion-item>
