New feature to show the screen of a selected user

--- a/src/app/protected/edu/lessons/tabs/room-control/device/roomdev.component.html
+++ b/src/app/protected/edu/lessons/tabs/room-control/device/roomdev.component.html
@@ -12,7 +12,9 @@
     </ion-toolbar>
   </ion-card-header>
   <ion-card-content class="ion-justify-content-center">
-    <img *ngIf="device" src="{{screenShot}}" />
+    <button *ngIf="device" (click)="showScreen()">
+      <img src="{{screenShot}}" />
+    </button>
     <h3 *ngIf="!device">{{ 'NODEVICE' | translate}}</h3>
   </ion-card-content>
 </ion-card>
