--- a/src/app/protected/cephalix/institutes/lists/institutes.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes.component.html
@@ -77,18 +77,18 @@
       </ion-label>
     </ion-item>
     <ion-item-sliding *ngFor="let object of rowData">
-      <ion-item>
+      <ion-item [color]="regcodeValid(object)" button  (click)="redirectToEdit(object)">
         <ion-note slot="start">
           <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
         </ion-note>
-        <ion-label (click)="redirectToEdit(object)">
-          <h2>{{ object.name }}</h2>
-          <p>{{ object.regCode }}</p>
+        <ion-label [color]="regcodeValid(object)" >
+          <h3>{{ object.name }}</h3>
+          <h4>{{ object.regCode }}</h4>
         </ion-label>
-        <ion-note style="max-width: 200px;" slot="end">
-          <p>{{ object.locality }}</p>
-          <p>{{ object.instituteType | translate }}</p>
-        </ion-note>
+        <ion-label>
+          <h4>{{ object.locality }}</h4>
+          <h4>{{ object.instituteType | translate }}</h4>
+        </ion-label>
       </ion-item>
       <ion-item-options side="end">
         <ion-button fill="clear" (click)="redirectToDelete(object)">
