--- a/src/app/protected/cranix/devices/lists/devices.component.html
+++ b/src/app/protected/cranix/devices/lists/devices.component.html
@@ -68,19 +68,19 @@
     id="devicesFilterMD" showCancelButton="never"></ion-searchbar>
   <ion-list>
     <ion-item-sliding *ngFor="let object of rowData">
-      <ion-item>
+      <ion-item button (click)="redirectToEdit(object)">
         <ion-note slot="start">
           <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
         </ion-note>
-        <ion-label (click)="redirectToEdit(object)">
-          <h2>{{ object.name }}</h2>
-          <p>{{ object.ip }}</p>
+        <ion-label>
+          <h3>{{ object.name }}</h3>
+          <h5>{{ object.ip }}</h5>
         </ion-label>
-        <ion-note style="max-width: 200px;" slot="end">
-          <p>{{ object.mac }}</p>
-          <p>{{ object.hwconfId | idToName:'hwconf' }}</p>
-          <p>{{ object.roomId | idToName:'room' }}</p>
-        </ion-note>
+        <ion-label>
+          <h5>{{ object.mac }}</h5>
+          <h5>{{ object.hwconfId | idToName:'hwconf' }}</h5>
+          <h5>{{ object.roomId | idToName:'room' }}</h5>
+        </ion-label>
       </ion-item>
       <ion-item-options side="end">
         <ion-button fill="clear" (click)="setDhcp(object)">
