--- a/src/app/protected/cranix/rooms/lists/rooms.component.html
+++ b/src/app/protected/cranix/rooms/lists/rooms.component.html
@@ -40,7 +40,6 @@
         rowSelection="multiple" [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
         (selectionChanged)="selectionChanged()" (gridReady)="onGridReady($event)">
       </ag-grid-angular>
-
     </ion-card-content>
   </ion-card>
 </ion-content>
@@ -65,19 +64,19 @@
     id="roomsFilterMD" showCancelButton="never"></ion-searchbar>
   <ion-list>
     <ion-item-sliding *ngFor="let object of rowData">
-      <ion-item>
+      <ion-item button (click)="redirectToEdit(object)">
         <ion-note slot="start">
           <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
         </ion-note>
-        <ion-label (click)="redirectToEdit(object)">
-          <h2>{{ object.name }}</h2>
-          {{ object.description }}
+        <ion-label>
+          <h3>{{ object.name }}</h3>
+          <h5>{{ object.description }}</h5>
         </ion-label>
-        <ion-note style="max-width: 200px;" slot="end">
-          {{ object.roomType | translate }}<br>
-          {{ object.roomControl | translate }}<br>
-          <div *ngIf="object.hwconfId">{{ object.hwconfId | idToName:'hwconf' }}</div>
-        </ion-note>
+        <ion-label>
+          <h5>{{ object.roomType | translate }}</h5>
+          <h5>{{ object.roomControl | translate }}</h5>
+          <h5 *ngIf="object.hwconfId">{{ object.hwconfId | idToName:'hwconf' }}</h5>
+        </ion-label>
       </ion-item>
       <ion-item-options side="end">
         <ion-button fill="clear" (click)="setDhcp(object)">
