--- a/src/app/protected/cranix/users/lists/users.component.html
+++ b/src/app/protected/cranix/users/lists/users.component.html
@@ -68,18 +68,18 @@
     id="usersFilterMD" showCancelButton="never"></ion-searchbar>
   <ion-list>
     <ion-item-sliding *ngFor="let object of rowData">
-      <ion-item>
+      <ion-item button (click)="redirectToEdit(object)">
         <ion-note slot="start">
           <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
         </ion-note>
-        <ion-label (click)="redirectToEdit(object)">
-          <h2>{{ object.uid }}</h2>
-          {{ object.surName }} {{ object.givenName }}
+        <ion-label>
+          <h3>{{ object.uid }}</h3>
+          <h5>{{ object.surName }} {{ object.givenName }}</h5>
         </ion-label>
-        <ion-note style="max-width: 200px;" slot="end">
-          {{ object.role | translate }}<br>
-          {{ object.classes }}
-        </ion-note>
+        <ion-label>
+          <h5>{{ object.role | translate }}</h5>
+          <h5>{{ object.classes }}</h5>
+        </ion-label>
       </ion-item>
       <ion-item-options side="end">
         <ion-button fill="clear" (click)="redirectToDelete(object)">
