--- a/src/global.scss
+++ b/src/global.scss
@@ -70,6 +70,23 @@
     --height: 400px;
     --width : 500px;
   }
+
+  .fullscreen-modal {
+    .modal-wrapper {
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .ios .fullscreen-modal {
+    .modal-wrapper {
+      top: 26px;
+    }
+  }
 }
 
 ion-content ion-segment {
